--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -2,9 +2,9 @@
 name = "piet-gpu-hal"
 version = "0.1.0"
 authors = ["Raph Levien <raph.levien@gmail.com>"]
+description = "An abstraction layer for running compute kernels on GPU."
+license = "MIT/Apache-2.0"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ash = "0.30"
