--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 ash = "0.30"
 once_cell = "1.3.1"
+ash-window = { git = "https://github.com/norse-rs/ash-window.git", branch = "dyn_trait" }
+raw-window-handle = "0.3"
