--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-ash = "0.30"
+ash = "0.31"
 once_cell = "1.3.1"
-ash-window = { git = "https://github.com/norse-rs/ash-window.git", branch = "dyn_trait" }
+ash-window = "0.5"
 raw-window-handle = "0.3"
