--- a/piet-gpu/Cargo.toml
+++ b/piet-gpu/Cargo.toml
@@ -14,6 +14,11 @@ path = "bin/cli.rs"
 name = "winit"
 path = "bin/winit.rs"
 
+[[example]]
+name = "android"
+path = "bin/android.rs"
+crate-type = ["cdylib"]
+
 [dependencies.piet-gpu-hal]
 path = "../piet-gpu-hal"
 
@@ -27,3 +32,9 @@ rand = "0.7.3"
 roxmltree = "0.13"
 winit = "0.23"
 clap = "2.33"
+
+[target.'cfg(target_os = "android")'.dependencies]
+ndk = "0.3"
+ndk-sys = "0.2.0"
+ndk-glue = "0.3"
+raw-window-handle = "0.3"
