--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -10,3 +10,9 @@ edition = "2018"
 ash = "0.31"
 ash-window = "0.5"
 raw-window-handle = "0.3"
+bitflags = "1.2.1"
+
+[target.'cfg(target_os="macos")'.dependencies]
+metal = "0.22"
+objc = "0.2.4"
+block = "0.1.6"
