--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -11,7 +11,9 @@ ash = "0.31"
 ash-window = "0.5"
 raw-window-handle = "0.3"
 bitflags = "1.2.1"
+smallvec = "1.6.1"
 
+[target.'cfg(target_os="windows")'.dependencies]
 winapi = { version = "0.3.9", features = [
     'd3d12', 'd3d12sdklayers', 'd3dcommon', 'd3dcompiler', 'dxgi',
     'dxgi1_2', 'dxgi1_3', 'dxgi1_4', 'dxgidebug', 'dxgiformat', 'dxgitype',
