--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -24,5 +24,6 @@ wio = "0.2.2"
 
 [target.'cfg(target_os="macos")'.dependencies]
 metal = "0.22"
-objc = "0.2.4"
+objc = "0.2.5"
 block = "0.1.6"
+cocoa-foundation = "0.1"
