--- a/piet-gpu/Cargo.toml
+++ b/piet-gpu/Cargo.toml
@@ -32,7 +32,7 @@ rand = "0.7.3"
 roxmltree = "0.13"
 winit = "0.23"
 clap = "2.33"
-ttf-parser = "0.12"
+swash = "0.1.4"
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk = "0.3"
