Reuse command buffers
Reuse submitted command buffers rather than continually allocating them.

This patch also improves the story across the different backends. On
DX12 it was reusing allocators without resetting them, which could be a
leak. And on Metal the reset "fails," so there's always a new alloc.

--- a/piet-gpu/Cargo.toml
+++ b/piet-gpu/Cargo.toml
@@ -39,3 +39,6 @@ ndk = "0.3"
 ndk-sys = "0.2.0"
 ndk-glue = "0.3"
 raw-window-handle = "0.3"
+
+[package.metadata.android.application]
+debuggable = true
