Start testing framework
This adds a prefix sum test. This patch is also trying to get a little
more serious about structuring both the test runner (toward the goal of
collecting proper statistics) and pipeline stages for the tests.

Still WIP but giving good results.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "piet-gpu",
     "piet-gpu-derive",
     "piet-gpu-hal",
-    "piet-gpu-types"
+    "piet-gpu-types",
+    "tests"
 ]
