Start work on new element pipeline
There's a bit of reorganizing as well. Shader stages are made available
from piet-gpu to the test rig, config is now a proper structure
(marshaled with bytemuck).

This commit just has the transform stage, which is a simple monoid scan
of affine transforms.

Progress toward #119

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -6,9 +6,18 @@ description = "Tests for piet-gpu shaders and generic GPU capabilities."
 license = "MIT/Apache-2.0"
 edition = "2021"
 
+[features]
+default = ["piet-gpu"]
+
 [dependencies]
 clap = "2.33"
 bytemuck = "1.7.2"
+kurbo = "0.7.1"
+rand = "0.7.3"
 
 [dependencies.piet-gpu-hal]
 path = "../piet-gpu-hal"
+
+[dependencies.piet-gpu]
+path = "../piet-gpu"
+optional = true
