--- a/piet-gpu/Cargo.toml
+++ b/piet-gpu/Cargo.toml
@@ -33,6 +33,7 @@ roxmltree = "0.13"
 winit = "0.25"
 clap = "2.33"
 swash = "0.1.4"
+bytemuck = { version = "1.7.2", features = ["derive"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk = "0.3"
