--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -12,6 +12,7 @@ ash-window = "0.7"
 raw-window-handle = "0.3"
 bitflags = "1.2.1"
 smallvec = "1.6.1"
+bytemuck = "1.7.2"
 
 [target.'cfg(target_os="windows")'.dependencies]
 winapi = { version = "0.3.9", features = [
