add glyph provider API
This exposes a new uniform API for generating scene fragments for glyph outlines.

--- a/piet-scene/Cargo.toml
+++ b/piet-scene/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 [dependencies]
 bytemuck = { version = "1.7.2", features = ["derive"] }
 smallvec = "1.8.0"
+pinot = "0.1.5"
+moscato = "0.1.2"
 
 # remove these and move demo to another directory
 piet-gpu = { path = "../piet-gpu" }
