Make `pgpu-render`  compile on non apple platforms
Also add `resolver="2"` to the entire workspace, in case we gain a wgpu
dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "2"
 
 members = [
     "pgpu-render",
@@ -7,5 +8,5 @@ members = [
     "piet-gpu-hal",
     "piet-gpu-types",
     "piet-scene",
-    "tests"
+    "tests",
 ]
