--- a/pgpu-render/Cargo.toml
+++ b/pgpu-render/Cargo.toml
@@ -13,6 +13,7 @@ piet-gpu = { path = "../piet-gpu" }
 piet-gpu-hal = { path = "../piet-gpu-hal" }
 piet-scene = { path = "../piet-scene" }
 
+[target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "ios", target_os = "macos")))'.dependencies]
 metal = "0.22"
 cocoa = "0.24.0"
 objc = "0.2.5"
