--- a/.github/workflows/push-shader.yml
+++ b/.github/workflows/push-shader.yml
@@ -18,20 +18,21 @@ jobs:
         run: |
           git fetch origin main
           git switch main
+          git config user.name "Commit by GitHub Action"
+          git config user.email "nobody@example.com"
           git merge dev -m "merge from dev branch"
+          sed -i '' '/shader\/gen/d' .gitignore
+          git add .gitignore
           git rm -r --ignore-unmatch piet-gpu/shader/gen
-          mkdir piet-gpu/shader/gen
+          git rm -r --ignore-unmatch tests/shader/gen
+          git rm -r --ignore-unmatch piet-gpu-hal/examples/shader/gen
       - uses: ./.github/actions/shader
-      - name: commit
-        id: commit
+      - name: commit compiled shaders
         continue-on-error: true
         run: |
           git add piet-gpu/shader/gen
-          git config user.name "Commit by GitHub Action"
-          git config user.email "nobody@example.com"
+          git add tests/shader/gen
+          git add piet-gpu-hal/examples/shader/gen
           git commit -m "commit compiled shaders"
       - name: push
-        if: steps.commit.outcome == 'success'
-        run: |
-          git show-ref
-          git push origin main
+        run: git push origin main
