--- a/piet-gpu/Cargo.toml
+++ b/piet-gpu/Cargo.toml
@@ -3,6 +3,7 @@ name = "piet-gpu"
 version = "0.1.0"
 authors = ["Raph Levien <raph.levien@gmail.com>"]
 description = "A compute-centric GPU 2D renderer."
+readme = "README.md"
 license = "MIT/Apache-2.0"
 edition = "2018"
 
