--- a/piet-gpu/Cargo.toml
+++ b/piet-gpu/Cargo.toml
@@ -26,15 +26,18 @@ path = "../piet-gpu-hal"
 [dependencies.piet-gpu-types]
 path = "../piet-gpu-types"
 
+[dependencies.piet-scene]
+path = "../piet-scene"
+features = ["kurbo"]
+
 [dependencies]
-piet = "0.2.0"
 png = "0.16.2"
 rand = "0.7.3"
 roxmltree = "0.13"
 winit = "0.26.1"
 clap = "2.33"
-swash = "0.1.4"
 bytemuck = { version = "1.7.2", features = ["derive"] }
+kurbo = "0.8.3"
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk = "0.3"
