Fix ash and raw_window_handle breakage
Follow API changes introduced by ash, ash_window, and raw_window_handle.
Also updates ash_window to 0.12.

Note: this doesn't fix the android client.

--- a/piet-gpu-hal/Cargo.toml
+++ b/piet-gpu-hal/Cargo.toml
@@ -7,8 +7,8 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-ash = "0.37"
-ash-window = "0.11"
+ash = { version = "0.37", features = ["loaded"] }
+ash-window = "0.12"
 raw-window-handle = "0.5"
 bitflags = "1.3.2"
 smallvec = "1.9"
