--- a/piet-gpu/Cargo.toml
+++ b/piet-gpu/Cargo.toml
@@ -31,7 +31,7 @@ piet = "0.2.0"
 png = "0.17.6"
 rand = "0.8.5"
 roxmltree = "0.13"
-winit = "0.27.3"
+winit = {version = "0.27.3",  default-features = false, features = ["x11", "wayland", "wayland-dlopen"]}
 raw-window-handle = "0.5"
 clap = "3.2.22"
 swash = "0.1.4"
