Initial commit of piet-wgsl
Starting an experimental port to WGSL shader language, using wgpu to run the examples. As of this commit, it's quite hacky and takes some shortcuts, but does render paths to a grayscale texture.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,9 @@ members = [
     "piet-gpu-hal",
     "piet-gpu-types",
     "piet-scene",
+    "piet-wgsl",
     "tests",
 ]
+
+[patch.crates-io]
+naga = { path = "../../dl/naga" }
