Prepare for wgsl-analyzer upgrades

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,8 @@
 {
   "wgsl-analyzer.customImports": {
-    // Update as appropriate to proper path
-    // temporary solution
-    // "config": "file:C:\\Users\\Daniel\\Documents\\repositories\\linebender\\piet-gpu\\piet-wgsl\\shader\\shared\\config.wgsl",
-    // "segment": "file:C:\\Users\\Daniel\\Documents\\repositories\\linebender\\piet-gpu\\piet-wgsl\\shader\\shared\\segment.wgsl",
-    // "pathtag": "file:C:\\Users\\Daniel\\Documents\\repositories\\linebender\\piet-gpu\\piet-wgsl\\shader\\shared\\pathtag.wgsl"
+    "config": "${workspaceFolder}/piet-wgsl/shader/shared/config.wgsl",
+    "segment": "${workspaceFolder}/piet-wgsl/shader/shared/segment.wgsl",
+    "pathtag": "${workspaceFolder}/piet-wgsl/shader/shared/pathtag.wgsl"
   },
   "wgsl-analyzer.diagnostics.nagaVersion": "main"
 }
