[wasm] Enable cargo-run-wasm
Enable wasm build. It is now possible to run `cargo run-wasm` in a
compatible sub-directory. This command builds the project for wasm and
hosts a local web server (with an empty HTML body) that an example can
modify (e.g. using winit).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,14 @@ members = [
     "piet-gpu-types",
     "piet-scene",
     "piet-wgsl",
+    "run-wasm",
     "tests",
 ]
+
+[workspace.package]
+edition = "2021"
+version = "0.1.0"
+authors = ["piet-gpu developers"]
 
 [patch.crates-io]
 # Required for metal support to work on wgpu
