Update piet-scene to depend on peniko
This adds a new dependency on peniko, reintroduces kurbo for geometry (!), removes the now defunct types from piet-scene and updates all the test scenes to use the new types.

--- a/piet-scene/Cargo.toml
+++ b/piet-scene/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 bytemuck = { version = "1.7.2", features = ["derive"] }
 smallvec = "1.8.0"
 moscato = { git = "https://github.com/dfrg/pinot" }
-kurbo = { version = "0.8.3", optional = true }
+peniko = { git = "https://github.com/linebender/peniko" }
