wgsl port in realtime
* add writeable image support to engine
* add external resources to engine
* update fine to output to a texture
* copy over original piet-gpu test scenes
* put it all in a pretty (resizable!) window

--- a/piet-wgsl/Cargo.toml
+++ b/piet-wgsl/Cargo.toml
@@ -18,3 +18,6 @@ piet-scene = { path = "../piet-scene" }
 
 # for picosvg, should be split out
 roxmltree = "0.13"
+
+# move this to an example
+winit = "0.27.5"
