--- a/piet-wgsl/examples/winit/Cargo.toml
+++ b/piet-wgsl/examples/winit/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wgpu = "0.14"
 piet-wgsl = { path = "../../../piet-wgsl" }
 piet-scene = { path = "../../../piet-scene" }
 winit = "0.27.5"
