--- a/examples/winit/Cargo.toml
+++ b/examples/winit/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "winit"
+name = "winit-example"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -7,8 +7,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-piet-wgsl = { path = "../../../piet-wgsl" }
-piet-scene = { path = "../../../piet-scene" }
+piet-wgsl = { path = "../../" }
+piet-scene = { path = "../../piet-scene" }
 winit = "0.27.5"
 pollster = "0.2.5"
 # for picosvg
