--- a/run-wasm/Cargo.toml
+++ b/run-wasm/Cargo.toml
@@ -3,6 +3,7 @@ name = "run-wasm"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
