--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["vello", "vello/examples/winit", "run-wasm"]
+members = ["vello", "vello/examples/winit", "vello/examples/bevy", "run-wasm"]
 
 [workspace.package]
 edition = "2021"
