--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["vello", "vello/examples/winit", "vello/examples/bevy", "run-wasm"]
+members = ["examples/with_winit", "examples/with_bevy", "examples/run_wasm"]
 
 [workspace.package]
 edition = "2021"
@@ -12,3 +12,20 @@ authors = ["piet-gpu developers"]
 # Required for metal support to work on wgpu
 # TODO: remove when wgpu is upgraded to 0.15
 naga = { git = "https://github.com/gfx-rs/naga", rev = "ddcd5d3121150b2b1beee6e54e9125ff31aaa9a2" }
+
+[package]
+name = "vello"
+version = "0.1.0"
+authors = ["Raph Levien <raph@google.com>"]
+license = "MIT/Apache-2.0"
+edition = "2021"
+
+[dependencies]
+wgpu = "0.14"
+raw-window-handle = "0.5"
+futures-intrusive = "0.5.0"
+parking_lot = "0.12"
+bytemuck = { version = "1.12.1", features = ["derive"] }
+smallvec = "1.8.0"
+moscato = { git = "https://github.com/dfrg/pinot" }
+peniko = { git = "https://github.com/linebender/peniko" }
