--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 
 [dependencies]
 wgpu = "0.14"
-vello = { path = "../../../vello" }
+vello = { path = "../../" }
 winit = "0.27.5"
 pollster = "0.2.5"
 # for picosvg
