--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "with_winit"
+description = "An example using vello to render to a winit window"
 version.workspace = true
 edition.workspace = true
 publish = false
@@ -13,6 +14,7 @@ winit = "0.27.5"
 pollster = "0.2.5"
 # for picosvg
 roxmltree = "0.13"
+clap = { version = "4.1.0", features = ["derive"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
