aligned naming conventions to prior

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup | Toolchain
+      - name: install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
