--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -16,6 +16,10 @@ pollster = "0.2.5"
 roxmltree = "0.13"
 clap = { version = "4.1.0", features = ["derive"] }
 
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+vello = { path = "../../", features = ["hot_reload"] }
+notify-debouncer-mini = "0.2.1"
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
 console_log = "0.2"
