--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ bytemuck = { version = "1.12.1", features = ["derive"] }
 smallvec = "1.8.0"
 moscato = { git = "https://github.com/dfrg/pinot" }
 peniko = { git = "https://github.com/linebender/peniko" }
+
+[features]
+buffer_labels = []
