--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = [
     "examples/with_winit",
     "examples/with_bevy",
     "examples/run_wasm",
-    "examples/usvg_viewer",
+    "examples/scenes",
+    "integrations/vello_svg",
 ]
 
 [workspace.package]
