--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -15,6 +15,7 @@ pollster = "0.2.5"
 # for picosvg
 roxmltree = "0.13"
 clap = { version = "4.1.0", features = ["derive"] }
+env_logger = "0.10.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 vello = { path = "../../", features = ["hot_reload"] }
