--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["examples/with_winit", "examples/with_bevy", "examples/run_wasm", "examples/usvg_viewer", "vello_shaders"]
+members = ["examples/with_winit", "examples/with_bevy", "examples/run_wasm", "examples/usvg_viewer", "vello_shaders", "vello_native"]
 
 [workspace.package]
 edition = "2021"
