--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wgpu = "0.14"
+wgpu = { workspace = true }
 vello = { path = "../../", features = ["buffer_labels"] }
 winit = "0.27.5"
 pollster = "0.2.5"
