--- a/examples/with_bevy/Cargo.toml
+++ b/examples/with_bevy/Cargo.toml
@@ -2,6 +2,7 @@
 name = "with_bevy"
 version = "0.1.0"
 edition = "2021"
+description = "Example of using Vello in a Bevy application"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
