--- a/examples/run_wasm/Cargo.toml
+++ b/examples/run_wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "run-wasm"
+name = "run_wasm"
 version.workspace = true
 edition.workspace = true
 publish = false
@@ -7,4 +7,5 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cargo-run-wasm = "0.2.0"
+# We use cargo-run-wasm main because of our workspace layout
+cargo-run-wasm = { git = "https://github.com/rukai/cargo-run-wasm", rev = "d14f73de77eaae44714b4817d660026a31f5f5a9" }
