--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,12 @@
 resolver = "2"
 
 members = [
+    "integrations/vello_svg",
+
     "examples/with_winit",
     "examples/with_bevy",
     "examples/run_wasm",
-    "examples/usvg_viewer",
+    "examples/scenes",
 ]
 
 [workspace.package]
