--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -1,22 +1,24 @@
 [package]
 name = "with_winit"
 description = "An example using vello to render to a winit window"
-version.workspace = true
-edition.workspace = true
 publish = false
+
+version.workspace = true
+license.workspace = true
+edition.workspace = true
+repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wgpu = { workspace = true }
 vello = { path = "../../", features = ["buffer_labels"] }
 scenes = { path = "../scenes" }
-anyhow = "1.0"
-winit = "0.27.5"
+anyhow = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
+
+wgpu = { workspace = true }
+winit = "0.28.1"
 pollster = "0.2.5"
-# for picosvg
-roxmltree = "0.13"
-clap = { version = "4.1.0", features = ["derive"] }
 env_logger = "0.10.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
