--- a/integrations/vello_svg/Cargo.toml
+++ b/integrations/vello_svg/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "vello_svg"
 description = "Render a usvg document to a vello scene"
+categories = ["rendering", "graphics"]
+keywords = ["2d", "vector-graphics", "vello"]
+
 version.workspace = true
+license.workspace = true
 edition.workspace = true
+repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
