--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -31,7 +31,7 @@ pollster = "0.2.5"
 env_logger = "0.10.0"
 log = "0.4.17"
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 vello = { path = "../../", features = ["hot_reload"] }
 notify-debouncer-mini = "0.2.1"
 
