--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
 vello = { path = "../../" }
-clap = { workspace = true }
+scenes = { path = "../scenes" }
+
+wgpu = { workspace = true }
+pollster = "0.2.5"
+env_logger = "0.10.0"
+png = "0.17.7"
