Update to better match other examples

--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "headless"
-version = "0.1.0"
-edition = "2021"
+description = "An example showing how to use `vello` to create raster images"
+publish = false
+
+version.workspace = true
+license.workspace = true
+edition.workspace = true
+repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
