--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -24,10 +24,10 @@ vello = { path = "../../", features = ["buffer_labels"] }
 scenes = { path = "../scenes" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
+pollster = { workspace = true }
 
 wgpu = { workspace = true }
 winit = "0.28.1"
-pollster = "0.2.5"
 env_logger = "0.10.0"
 log = "0.4.17"
 
@@ -38,7 +38,7 @@ notify-debouncer-mini = "0.2.1"
 
 [target.'cfg(target_os = "android")'.dependencies]
 winit = { version = "0.28", features = ["android-native-activity"] }
-android_logger = "0.12.0"
+android_logger = "0.13.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
