--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ bytemuck = { version = "1.12.1", features = ["derive"] }
 smallvec = "1.8.0"
 moscato = { git = "https://github.com/dfrg/pinot", rev = "59db153" }
 peniko = { git = "https://github.com/linebender/peniko", rev = "cafdac9a211a0fb2fec5656bd663d1ac770bcc81" }
+guillotiere = "0.6.2"
 
 [workspace.dependencies]
 wgpu = "0.15"
