--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -15,6 +15,7 @@ vello = { path = "../../" }
 vello_svg = { path = "../../integrations/vello_svg" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
+image = "0.24.5"
 
 # Used for the `download` command
 byte-unit = "4.0"
