--- a/vello_shaders/Cargo.toml
+++ b/vello_shaders/Cargo.toml
@@ -5,13 +5,15 @@ edition = "2021"
 
 [features]
 default = ["compile", "wgsl", "msl"]
-compile = ["naga"]
+compile = ["naga", "thiserror"]
 wgsl = []
 msl = []
 
 [dependencies]
 naga = { git = "https://github.com/gfx-rs/naga", features = ["wgsl-in", "msl-out", "validate"], optional = true }
+thiserror = { version = "1.0.40", optional = true }
 
 [build-dependencies]
 naga = { git = "https://github.com/gfx-rs/naga", features = ["wgsl-in", "msl-out", "validate"] }
+thiserror = "1.0.40"
 
