--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -16,6 +16,7 @@ vello_svg = { path = "../../integrations/vello_svg" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 image = "0.24.5"
+instant = "0.1.12"
 
 # Used for the `download` command
 byte-unit = "4.0"
