Starting work on contiguous path storage
Shaders are written, wiring up has been coded, but hasn't been tested yet.

In addition, path_count needs to do more aggressive clip to bounding box, though the current state should more or less render correctly.

WIP, it renders paths but has artifacts.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
   "wgsl-analyzer.diagnostics.nagaVersion": "main",
   "wgsl-analyzer.preprocessor.shaderDefs": [
     "full",
-    "msaa16"
+    "msaa16",
+    "load_balanced"
   ]
 }
