--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -24,7 +24,7 @@ vello = { path = "../../", features = ["buffer_labels"] }
 scenes = { path = "../scenes" }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
-instant = "0.1.12"
+instant = { workspace = true }
 pollster = { workspace = true }
 
 wgpu = { workspace = true }
